# mcp-google-ads

./: api_client.py  cli.py  google_ads_server.py  pyproject.toml
tools/: __init__.py  accounts.py  ad_groups.py  ads.py  assets.py  campaigns.py  client.py  gaql.py  mock_data.py  reporting.py
