[project]
name = "mcp-google-ads"
version = "1.1.0"
description = "Google Ads API - Tools, CLI, and MCP server for advertising and analytics"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "BuyPass", email = "dev@buypasses.net"}
]
keywords = ["mcp", "google-ads", "advertising", "analytics", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "google-api-python-client>=2.163.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "mcp[cli]>=1.3.0",
    "requests>=2.31.0",
]

[project.scripts]
google-ads = "cli:main"
mcp-google-ads = "google_ads_server:main"

[project.urls]
"Homepage" = "https://github.com/Dysron/mcps"
"Bug Tracker" = "https://github.com/Dysron/mcps/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tools"]
py-modules = ["google_ads_server", "cli"]
